<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">片场助手</string>
    <string name="no_data">没有找到数据</string>
    <string name="memu_text_1">请选择 场</string>
    <string name="memu_text_2">请选择 镜次</string>
    <string name="left_memu_text_1">添加剧本分镜</string>
    <string name="left_memu_text_2">从Excel导入</string>
    <string name="left_memu_text_3">检查更新</string>
    <string name="left_memu_text_4">工作版本</string>
    <string name="left_memu_text_5">使用简介</string>
    <string name="left_memu_text_6">关于我们</string>
    <string name="left_memu_text_7">自定义场记板</string>
    <string name="left_memu_text_8">退出</string>
    <string name="layout_addfilm_text_1">请填写电影名称</string>
    <string name="layout_addfilm_text_2">电影名</string>
    <string name="layout_addfilm_text_3">点击添加更多信息</string>
    <string name="layout_addfilm_text_4">导演</string>
    <string name="layout_addfilm_text_6">副导演</string>
    <string name="layout_addfilm_text_8">摄影师</string>
    <string name="layout_addfilm_text_10">灯光</string>
    <string name="layout_addfilm_text_12">制片</string>
    <string name="layout_addfilm_text_14">提交</string>
    <string name="layout_addscene_text_1">请输入场景名</string>
    <string name="layout_addscene_text_2">场景名</string>
    <string name="layout_addscene_text_3">场次</string>
    <string name="layout_addscene_text_4">拍摄地</string>
    <string name="layout_addscene_text_5">请选择地点</string>
    <string name="layout_addscene_text_6">提交</string>
    <string name="layout_editscene_text_1">场景名</string>
    <string name="layout_editscene_text_2">请输入场景名</string>
    <string name="layout_editscene_text_3">拍摄地</string>
    <string name="layout_editscene_text_4">请选择地点</string>
    <string name="layout_editscene_text_5">场号</string>
    <string name="layout_editscene_text_6">请选择地点</string>
    <string name="layout_editscene_text_7">提交</string>
    <string name="layout_addshots_text_1">请输入景别名</string>
    <string name="layout_addshots_text_2">景别</string>
    <string name="layout_addshots_text_3">提交</string>
    <string name="layout_addroll_text_1">请输入卡名</string>
    <string name="layout_addroll_text_2">卡名</string>
    <string name="layout_add_take_text_1">舍弃原因</string>
    <string name="layout_add_take_text_2">视频编号</string>
    <string name="layout_add_take_text_3">音频编号</string>
    <string name="layout_edit_shot_text_1">镜名</string>
    <string name="layout_edit_shot_text_2">镜号</string>
    <string name="layout_edit_shot_text_3">景别</string>
    <string name="layout_edit_shot_text_4">提交</string>
    <string name="layout_edit_shot_text_5">关键词</string>
        <string name="layout_edit_shot_text_6">关键词</string>
    
    <string name="layout_actionbar_sb_text_1">当前位置</string>
    <string name="layout_add_roll_text_1">提交</string>
    <string name="layout_map_text_1">确定</string>
    <string name="layout_map_text_2">下一组数据</string>
    <string name="layout_map_text_3">开始检索</string>
    <string name="layout_sb_selector_text_1">创建时间:</string>
    <string name="layout_addtake_text_1">这里显示有关信息</string>
    <string name="layout_addtake_text_2">场</string>
    <string name="layout_addtake_text_3">镜</string>
    <string name="layout_addtake_text_4">次</string>
    <string name="layout_addtake_text_5">景别.</string>
    <string name="layout_addtake_text_6">内存卡.</string>
    <string name="layout_addtake_text_7">日期.</string>
    <string name="layout_addtake_text_8">拍板</string>
    <string name="layout_addtake_text_9">提交</string>
    <string name="layout_edittake_text_1">这里显示有关信息</string>
    <string name="layout_edittake_text_2">场</string>
    <string name="layout_edittake_text_3">镜</string>
    <string name="layout_edittake_text_4">次</string>
    <string name="layout_edittake_text_5">景别.</string>
    <string name="layout_edittake_text_6">日期</string>
    <string name="layout_edittake_text_7">视频编号</string>
    <string name="layout_edittake_text_8">音频编号</string>
    <string name="layout_edittake_text_9">是否可用</string>
    <string name="layout_edittake_text_10">原因</string>
    <string name="layout_edittake_text_11">提交</string>
    <string name="layout_roll_text_1">提交</string>
    <string name="layout_shots_text_1">提交</string>
    <string name="layout_ac_work_version_text_1">备份当前版本</string>
    <string name="layout_dialog_addtake_text_1">提交</string>
    <string name="layout_dialog_addtake_text_2">请输入音频编号</string>
    <string name="layout_dialog_addtake_text_3">请输入视频编号</string>
    <string name="layout_dialog_addtake_text_4">请输入舍弃原因</string>
    <string name="layout_dialog_addtake_text_5">可用</string>
    <string name="layout_dialog_addtake_text_6">不可用</string>
    <string name="layout_dialog_addtake_text_7">保</string>
    <string name="layout_dialog_addshot_text_1">场号:</string>
    <string name="layout_dialog_addshot_text_2">镜名:</string>
    <string name="layout_dialog_addshot_text_3">镜号:</string>
    <string name="layout_dialog_addshot_text_4">景别:</string>
    <string name="layout_dialog_addshot_text_5">添加</string>
    <string name="layout_dialog_addshot_text_6">关键词:</string>
    <string name="layout_dropdowm_shots_text_1">请选择景别</string>
    <string name="layout_dropdowm_shots_text_6">请选择关键词</string>
    <string name="layout_fun_intro_text_1">点击此处添加一个剧本分镜</string>
    <string name="layout_fun_intro_text_2">(+场):添加 场</string>
    <string name="layout_fun_intro_text_3">(+景):添加 自定义景别</string>
    <string name="layout_fun_intro_text_4">(+镜):添加 镜</string>
    <string name="layout_fun_intro_text_5">(联系人):可以联系剧组人员</string>
    <string name="layout_fun_intro_text_6">(定位):可以对当前地点进行地位以及计算到各场景间的距离</string>
    <string name="layout_fun_intro_text_7">(+卡):添加 内存卡</string>
    <string name="layout_fun_intro_text_8">点击选择场，长按可对此进行重新编辑</string>
    <string name="layout_fun_intro_text_9">点击选择镜，长按可对此进行重新编辑</string>
    <string name="layout_fun_intro_text_10">导入excel时，参照以下格式，请使用excel2003版本，文件后缀名为.xls</string>
    <string name="layout_fun_intro_text_11">正式拍摄过程中以及自定义场记板过程中</string>
    <string name="layout_fun_intro_text_12">(+卡):添加 内存卡</string>
    <string name="layout_lv_sb_scene_text_1">场号:</string>
    <string name="layout_view_sat_text_1">未完成</string>
    <string name="layout_view_sat_text_2">完成</string>
    <string name="layout_view_sat_text_3">景别:</string>
    <string name="layout_view_sat_text_4">开始新的拍摄</string>
    <string name="layout_view_sat_text_5">关键词:</string>

</resources>