<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white1" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/layout_fun_intro_text_2"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/iv1"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_centerVertical="true"
        android:src="@drawable/intro_pic_2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:text="@string/layout_fun_intro_text_3"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:text="@string/layout_fun_intro_text_4"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/layout_fun_intro_text_5"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView01"
        android:layout_alignParentLeft="true"
        android:text="@string/layout_fun_intro_text_6"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView02"
        android:layout_alignParentLeft="true"
        android:text="@string/layout_fun_intro_text_7"
        android:textColor="@color/black"
        android:textSize="15sp" />

</RelativeLayout>