<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/baidu" >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:onClick="finish"
            android:src="@drawable/actionbar_return" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_edittext_1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:paddingLeft="5dp"
            android:text="@string/layout_addroll_text_2"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_add_roll_roll_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/layout_addroll_text_1"
            android:inputType="none"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColorHint="#AAAAAA" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_roll_add"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="8dp"
        android:text="@string/layout_add_roll_text_1"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>