<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_full"
    android:background="@color/grey"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_slate_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:scaleType="matrix"
            android:src="@drawable/bg_slate_head1" />

        <ImageView
            android:id="@+id/iv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="matrix"
            android:src="@drawable/bg_slate_head2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_storyboard_shooting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_slate_body"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_storyboard_shooting_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/layout_addtake_text_1"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/white" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2" >

            <TableRow>

                <TextView
                    android:gravity="center"
                    android:text="@string/layout_addtake_text_2"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:gravity="center"
                    android:text="@string/layout_addtake_text_3"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:gravity="center"
                    android:text="@string/layout_addtake_text_4"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/tv_storyboard_shooting_scene_number_value"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tv_storyboard_shooting_shot_number_value"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tv_storyboard_shooting_take_number_value"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="30sp" />
            </TableRow>
        </TableLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/layout_addtake_text_5"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/sp_storyboard_shooting_shots"
                        android:layout_width="150dp"
                        android:layout_height="30dp" >
                    </Spinner>
                </LinearLayout>

                <View
                    android:layout_width="220dp"
                    android:layout_height="5dp"
                    android:layout_marginLeft="10dp"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/layout_addtake_text_6"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/sp_storyboard_shooting_roll"
                        android:layout_width="150dp"
                        android:layout_height="30dp" >
                    </Spinner>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/iv_storyboard_shooting_image"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@drawable/default_no_image" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/layout_addtake_text_7"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_storyboard_shooting_nowtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_ac_shotting_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="8dp"
            android:text="@string/layout_addtake_text_8"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_sb_showAddTake_Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="8dp"
            android:text="@string/layout_addtake_text_9"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>