<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >
   <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/baidu" >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:onClick="finish"
            android:src="@drawable/actionbar_return" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/et_ll_ss_more_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_edittext_1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:paddingLeft="5dp"
                android:text="@string/layout_edit_shot_text_1"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_edit_shot_shot_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:hint="@string/layout_edit_shot_text_1"
                android:inputType="none"
                android:paddingLeft="10dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:background="@drawable/divider_horizontal_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:paddingLeft="5dp"
                android:text="@string/layout_edit_shot_text_2"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_edit_shot_shot_number"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:hint="@string/layout_edit_shot_text_2"
                android:inputType="number"
                android:paddingLeft="10dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:background="@drawable/divider_horizontal_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:paddingLeft="5dp"
                android:text="@string/layout_edit_shot_text_3"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_edit_shot_shots"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:paddingLeft="10dp" >
            </Spinner>
        </LinearLayout>
        
        
        
        
         <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:background="@drawable/divider_horizontal_line" />
        
        
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:paddingLeft="5dp"
                android:text="@string/layout_edit_shot_text_5"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_edit_shot_shot_keyword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:hint="@string/layout_edit_shot_text_6"
                android:inputType="none"
                android:paddingLeft="10dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_edit_shot_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="8dp"
        android:text="@string/layout_edit_shot_text_4"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>